Adds 2022 SBGames article

--- a/papers/index.html
+++ b/papers/index.html
@@ -37,15 +37,15 @@
           <div class="actions">
             <nav>
               <ul class="action-list">
-                <!-- <li>
-                  <a href="https://ieeexplore.ieee.org/abstract/document/8924841/" target="_blank">DOI 10.1109/SBGames.2019.00029</a>
-                </li> -->
-                <!-- <li>
-                  <a href="https://www.sbgames.org/sbgames2018/files/papers/ComputacaoShort/188400.pdf" target="_blank">Read online</a>
-                </li> -->
-                <!-- <li>
-                  <a href="citations/architecture2019costa.bib" target="_blank">Cite</a>
-                </li> -->
+                <li>
+                  <a href="https://ieeexplore.ieee.org/document/9961109" target="_blank">DOI 10.1109/SBGAMES56371.2022.9961109</a>
+                </li>
+                <li>
+                  <a href="pdfs/coutinho2022design.pdf" target="_blank">Read online</a>
+                </li>
+                <li>
+                  <a href="citations/coutinho2022design.bib" target="_blank">Cite</a>
+                </li>
               </ul>
             </nav>
           </div>
@@ -70,7 +70,7 @@
                   <a href="https://www.sbgames.org/sbgames2019/files/papers/ComputacaoFull/196478.pdf" target="_blank">Read online</a>
                 </li>
                 <li>
-                  <a href="citations/real2019andrade.bib" target="_blank">Cite</a>
+                  <a href="citations/andrade2019real.bib" target="_blank">Cite</a>
                 </li>
               </ul>
             </nav>
@@ -92,7 +92,7 @@
                   <a href="https://www.sbgames.org/sbgames2018/files/papers/ComputacaoShort/188400.pdf" target="_blank">Read online</a>
                 </li>
                 <li>
-                  <a href="citations/architecture2018costa.bib" target="_blank">Cite</a>
+                  <a href="citations/costa2018architecture.bib" target="_blank">Cite</a>
                 </li>
               </ul>
             </nav>
